/*
 * $Id: ChangeLog,v 1.6147 2008/06/20 15:37:13 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-06-20 19:31 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/copyfile.c
    * Fixed to avoid double release

2008-06-20 17:35 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * config/os2/gcc.cf
    + added zlib to the build process.

2008-06-20 10:25 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    * Revised hb_vmPushLocalByRef() to not use hb_itemCopy() for ExtRef

2008-06-20 14:02 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * contrib\hbzlib\zip.c
  * contrib\hbzlib\zipnew.cpp
    ! Fixed memory leaks, when are ised relative paths under windows platforms.
    * minor refinements
    ( aported by Juan Galvez )

2008-06-19 23:11 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * source/pp/ppcore.c
    * Partial Sync with Harbour
    * Started #ifdef guards to allow sharing of same source file with Harbour
      /* Przemek I'll greatly appreciate your cooperation */

    ! Fixed wrong line number related to Extended Blocks
      /* Przemek this should be fixed at Harbour too */

  * source/compiler/ppcomp.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    ! Fixed wrong line number related to Extended Blocks

  * source/compiler/harbour.sly
    ! Fixed to support White Space between SWITCH and first CASE

  * source/rtl/copyfile.c
    ! Fixed memory leak related to new optional codeblock argument

2008-06-19 09:31 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/arrays.c
    * Minor refinment to correct recursive functionality of pBaseArray->uiFlags

2008-06-18 17:44 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * bin/bld_bat
    * added zlib.lib

  * utils/xbscript/bld_ads.bat